--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path_provider: ^2.0.6
   # For page navigation without context
   get: ^4.3.8
+  # For percent indication on Timer Screen
+  percent_indicator: ^3.4.0
 
 dev_dependencies:
   flutter_test:
